#124 Upgrade to OpenJDK 12